--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/genai": "*",
     "@react-three/drei": "^9.105.0",
     "@react-three/fiber": "^8.16.0",
+    "handtrackjs": "^0.0.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.160.0"
